app/app.css
body{
	padding:0;
	margin:0;
}

html,body{
	height:100%;
}

#map{
    height: -webkit-calc(100% - 60px);
    height: -moz-calc(100% - 60px);
    height: calc(100% - 60px);
    top:60px;
}

#inputarea{
	position:absolute;
	height:60px;
  width:100%;
	top:0px;
	padding:15px 10px;
	z-index:10;
	background-color:#000;
	font-size:25px;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	color: #fff;
}

.buttons {
    color: white;
    font-size: 35px;
    text-align: center;
    cursor: pointer;
    z-index: 2;
		height: 50px;
		width: 50px;
		background: black;
		position: absolute;

}


#reload-button {
    top: 200px;
    left: calc(100% - 50px);
}

#locateMe-button {
    top: 251px;
    left: calc(100% - 50px);
}

#info-button {
	top: 302px;
	left: calc(100% - 50px);
}

#search-button {
    height: 1000px;
    top: calc(100% - 100px);
    width: 100px;
    background: black;
    position: absolute;
    left: calc(50% - 50px);
    font-size: 50px;
    visibility: hidden;
}

#loading {
    position: fixed;
    height: 100%;
    width: 100%;
    top:0px;
    left: 0px;
    z-index: 1001;
    background: black;
    opacity: 0.8;
    color: white;
    visibility: hidden;
    text-align: center;
    vertical-align: middle;
    font-size: 50px;
}

#info_overlay {
	position: fixed;
	height: 100%;
	width: 100%;
	top:0px;
	left: 0px;
	z-index: 1001;
	background: black;
	opacity: 0.8;
	color: white;
	visibility: hidden;
	text-align: center;
	vertical-align: middle;
	font-size: 40px;
}

#editOSM-button{
	cursor:pointer;
}

.buttons:hover, #editOSM-button:hover{
	color: grey;
}

